--- a/index/index.html
+++ b/index/index.html
@@ -59,36 +59,35 @@
   <div id="weather" class="forecast-container"></div>
 
   <script>
-    const apiKey = "a045a78d94a7d9c2576c681b0f56d266";
-
-    function getWeather() {
-      let city = document.getElementById('city').value;
-      if (!city) {
-        // Default to Johannesburg if no city typed
-        fetchWeatherByCity("Johannesburg");
+    // Simple geocoding API for converting city name to lat/lon
+    async function getCoordinates(city) {
+      const res = await fetch(`https://geocoding-api.open-meteo.com/v1/search?name=${city}`);
+      const data = await res.json();
+      if (data.results && data.results.length > 0) {
+        return { lat: data.results[0].latitude, lon: data.results[0].longitude };
       } else {
-        fetchWeatherByCity(city);
+        return null;
       }
     }
 
-    function fetchWeatherByCity(city) {
-      fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`)
-        .then(res => res.json())
-        .then(data => {
-          const lat = data.coord.lat;
-          const lon = data.coord.lon;
-          fetchWeather(lat, lon);
-        })
-        .catch(() => {
+    async function getWeather() {
+      let city = document.getElementById('city').value.trim();
+      let coords;
+
+      if (!city) {
+        // Default to Johannesburg
+        coords = { lat: -26.2041, lon: 28.0473 };
+      } else {
+        coords = await getCoordinates(city);
+        if (!coords) {
           document.getElementById('weather').innerHTML = "<p style='color:red;'>City not found.</p>";
-        });
-    }
+          return;
+        }
+      }
 
-    function fetchWeather(lat, lon) {
-      const url = `https://api.openweathermap.org/data/2.5/onecall?lat=${lat}&lon=${lon}&exclude=minutely,hourly,alerts&appid=${apiKey}&units=metric`;
-      const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(url)}`;
+      const url = `https://api.open-meteo.com/v1/forecast?latitude=${coords.lat}&longitude=${coords.lon}&daily=temperature_2m_max,temperature_2m_min,weathercode&timezone=Africa/Johannesburg`;
 
-      fetch(proxyUrl)
+      fetch(url)
         .then(res => res.json())
         .then(data => displayWeather(data))
         .catch(() => {
@@ -99,19 +98,16 @@
     function displayWeather(data) {
       const days = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];
       let html = "";
-      data.daily.slice(0,7).forEach(day => {
-        const date = new Date(day.dt * 1000);
+      for (let i = 0; i < 7; i++) {
+        const date = new Date(data.daily.time[i]);
         html += `
           <div class="day-card">
             <strong>${days[date.getDay()]}</strong><br>
             <span style="font-size:13px;">${date.toDateString().split(' ').slice(1,3).join(' ')}</span><br>
-            <img src="https://openweathermap.org/img/wn/${day.weather[0].icon}@2x.png" 
-                 alt="${day.weather[0].main}" style="width:60px;height:60px;"><br>
-            <strong>${day.weather[0].main}</strong><br>
-            🌡️ ${Math.round(day.temp.day)}°C<br>
-            💧 ${day.humidity}% Humidity
+            <strong>${data.daily.weathercode[i]}</strong><br>
+            🌡️ ${data.daily.temperature_2m_max[i]}°C / ${data.daily.temperature_2m_min[i]}°C
           </div>`;
-      });
+      }
       document.getElementById('weather').innerHTML = html;
     }
 
